<resources>
    <!-- main title strings -->
    <string name="app_name">TheHiveApp_Android</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_hive_form">Hive Form</string>
    <string name="hive_form_title_default">Hive Name</string>

    <string name="add_hive_form_title">Add Hive</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- basic -->
    <string name="notes">Notes</string>
    <string name="hello">Hello!</string>
    <!-- numbers-->
    <string name="text_one">One</string>
    <string name="text_two">Two</string>
    <string name="text_three">Three</string>
    <string name="text_four">Four</string>
    <string name="text_five">Five</string>
    <!-- inspection log titles-->
    <string name="honey_count">Honey Count</string>
    <string name="pollen_count">Pollen Count</string>
    <string name="brood_count">Brood Count</string>
    <string name="seen_queen">Did you see the queen?</string>
    <string name="seen_eggs">Did you see new eggs?</string>
    <string name="mite_check">Did you see mites?</string>
    <string name="overall_health">Overall hive health</string>
    <!-- reminders -->
    <string name="notification">New Notification</string>
    <string name="notification_channel_description">This is a sample notification channel for demonstration purpose.</string>
    <string name="pick_time">Set reminder</string>
    <string name="cancelNotification">Clear all</string>

    <string-array name="frame_size_array">
        <item>Shallow (5 3/8")</item>
        <item>Medium (6 1/4")</item>
        <item>Deep (9 1/8")</item>
    </string-array>
</resources>
