<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="64dp"
    android:isScrollContainer="true"
    tools:context=".ui.hiveForm.InspectionFormFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/hiveNameSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/hive_form_title_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hive_form_title_default"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

        <TextView
            android:id="@+id/honeyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/honey_count"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <RadioGroup
            android:id="@+id/honeyInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/honey1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_one" />

            <RadioButton
                android:id="@+id/honey2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_two" />

            <RadioButton
                android:id="@+id/honey3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_three" />

            <RadioButton
                android:id="@+id/honey4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_four" />

            <RadioButton
                android:id="@+id/honey5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_five" />
        </RadioGroup>

        <TextView
            android:id="@+id/pollenText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pollen_count"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <RadioGroup
            android:id="@+id/pollenInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/pollen1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_one" />

            <RadioButton
                android:id="@+id/pollen2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_two" />

            <RadioButton
                android:id="@+id/pollen3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_three" />

            <RadioButton
                android:id="@+id/pollen4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_four" />

            <RadioButton
                android:id="@+id/pollen5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_five" />
        </RadioGroup>

        <TextView
            android:id="@+id/broodText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/brood_count"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <RadioGroup
            android:id="@+id/broodInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/brood1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_one" />

            <RadioButton
                android:id="@+id/brood2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_two" />

            <RadioButton
                android:id="@+id/brood3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_three" />

            <RadioButton
                android:id="@+id/brood4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_four" />

            <RadioButton
                android:id="@+id/brood5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_five" />

        </RadioGroup>

        <Switch
            android:id="@+id/seen_queen_switch"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:text="@string/seen_queen" />

        <Switch
            android:id="@+id/seen_eggs_switch"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:text="@string/seen_eggs" />

        <Switch
            android:id="@+id/mite_check_switch"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:text="@string/mite_check" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Save" />


    </LinearLayout>
</androidx.core.widget.NestedScrollView>